--- a/Symbolic Differentiation/Symbolic Differentiation.vcxproj
+++ b/Symbolic Differentiation/Symbolic Differentiation.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -110,6 +110,7 @@
     <ClCompile Include="Curve.cpp" />
     <ClCompile Include="Differentiate.cpp" />
     <ClCompile Include="MathStack.cpp" />
+    <ClCompile Include="OptionsDialog.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -121,6 +122,7 @@
     <ClInclude Include="Curve.h" />
     <ClInclude Include="Differentiate.h" />
     <ClInclude Include="MathStack.h" />
+    <ClInclude Include="OptionsDialog.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Symbolic Differentiation.h" />
