--- a/Symbolic Differentiation/Symbolic Differentiation.vcxproj
+++ b/Symbolic Differentiation/Symbolic Differentiation.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{390D8552-73AE-4519-B1EE-51467987EB20}</ProjectGuid>
     <Keyword>MFCProj</Keyword>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName> </ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -106,6 +107,8 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Anchor.cpp" />
+    <ClCompile Include="BaseComboBox.cpp" />
     <ClCompile Include="Calculate.cpp" />
     <ClCompile Include="Curve.cpp" />
     <ClCompile Include="Differentiate.cpp" />
@@ -115,9 +118,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Symbolic Differentiation.cpp" />
+    <ClCompile Include="SymbolicDifferentiation.cpp" />
+    <ClCompile Include="SymbolicDifferentiationDlg.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Anchor.h" />
+    <ClInclude Include="BaseComboBox.h" />
     <ClInclude Include="Calculate.h" />
     <ClInclude Include="Curve.h" />
     <ClInclude Include="Differentiate.h" />
@@ -125,13 +131,11 @@
     <ClInclude Include="OptionsDialog.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Symbolic Differentiation.h" />
+    <ClInclude Include="SymbolicDifferentiation.h" />
+    <ClInclude Include="SymbolicDifferentiationDlg.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Symbolic Differentiation.rc" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="res\Symbolic Differentiation.rc2" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -141,6 +145,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\Symbolic Differentiation.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\Symbolic Differentiation.rc2" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
